# encoding_rs_io

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  util.rs
