[package]
name = "encoding_rs_io"
version = "0.1.7"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Streaming transcoding for encoding_rs"
documentation = "https://docs.rs/encoding_rs_io"
repository = "https://github.com/BurntSushi/encoding_rs_io"
readme = "README.md"
keywords = ["encoding", "transcoding", "stream", "io", "read"]
license = "MIT OR Apache-2.0"
categories = ["text-processing", "encoding", "web-programming", "email"]
exclude = ["/ci/*", "/.travis.yml", "/appveyor.yml"]

[badges]
travis-ci = { repository = "BurntSushi/encoding_rs_io" }
appveyor = { repository = "BurntSushi/encoding_rs_io" }

[lib]
bench = false

[dependencies]
encoding_rs = "0.8"

[profile.release]
debug = true
